[package]
edition = "2018"
name = "mfpdl"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]

[dependencies]
reqwest = {version = "0.10.4", features = ["stream"]}
scraper = "0.11.0"
futures = "0.3.4"
tokio = {version = "0.2.20", features = ["fs",  "io-util", "macros", "process", "rt-threaded", "sync"]}
failure = "0.1.7"
indicatif = "0.14.0"
lazy_static = "1.4.0"
clap = "2.33.0"
